--- a/src/ResourceManager/Network/Commands.Network/Commands.Network.csproj
+++ b/src/ResourceManager/Network/Commands.Network/Commands.Network.csproj
@@ -57,8 +57,8 @@
       <HintPath>..\..\..\packages\Microsoft.Azure.KeyVault.Core.1.0.0\lib\net40\Microsoft.Azure.KeyVault.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Azure.Management.Network, Version=17.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Network.17.0.0-preview\lib\net452\Microsoft.Azure.Management.Network.dll</HintPath>
+    <Reference Include="Microsoft.Azure.Management.Network, Version=19.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Network.19.0.0-preview\lib\net452\Microsoft.Azure.Management.Network.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
@@ -311,9 +311,9 @@
     <Compile Include="Models\PSSubnet.cs" />
     <Compile Include="Models\PSSubnetAssociation.cs" />
     <Compile Include="Models\PSTopLevelResource.cs" />
-    <Compile Include="Models\PSTroubleshootDetails.cs" />
-    <Compile Include="Models\PSTroubleshootRecommendedActions.cs" />
-    <Compile Include="Models\PSTroubleshootResult.cs" />
+    <Compile Include="Models\PSTroubleshootingDetails.cs" />
+    <Compile Include="Models\PSTroubleshootingRecommendedActions.cs" />
+    <Compile Include="Models\PSTroubleshootingResult.cs" />
     <Compile Include="Models\PSUsage.cs" />
     <Compile Include="Models\PSUsageCustom.cs" />
     <Compile Include="Models\PSUsageName.cs" />
