--- a/src/ResourceManager/Network/Commands.Network/Commands.Network.csproj
+++ b/src/ResourceManager/Network/Commands.Network/Commands.Network.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Models\PSConnectionMonitorSource.cs" />
     <Compile Include="Models\PSConnectionStateSnapshot.cs" />
     <Compile Include="Models\PSEndpointServiceResult.cs" />
+    <Compile Include="Models\PSNetworkWatcherProtocolConfiguration.cs" />
     <Compile Include="Models\PSServiceEndpoint.cs" />
     <Compile Include="Models\PSLoadBalancerSku.cs" />
     <Compile Include="Models\PSPublicIpAddressSku.cs" />
@@ -363,6 +364,7 @@
     <Compile Include="NetworkWatcher\ConnectionMonitor\SetAzureNetworkWatcherConnectionMonitorCommand.cs" />
     <Compile Include="NetworkWatcher\ConnectionMonitor\StartAzureNetworkWatcherConnectionMonitorCommand.cs" />
     <Compile Include="NetworkWatcher\ConnectionMonitor\StopAzureNetworkWatcherConnectionMonitorCommand.cs" />
+    <Compile Include="NetworkWatcher\NewAzureNetworkWatcherProtocolConfiguration.cs" />
     <Compile Include="NetworkWatcher\TestAzureNetworkWatcherConnectivityCommand.cs" />
     <Compile Include="ProviderWideCmdlets\GetAzureBgpServiceCommunityCommand.cs" />
     <Compile Include="NetworkWatcher\GetAzureNetworkWatcherCommand.cs" />
