--- a/src/ResourceManager/Storage/Commands.Management.Storage/Commands.Management.Storage.csproj
+++ b/src/ResourceManager/Storage/Commands.Management.Storage/Commands.Management.Storage.csproj
@@ -63,7 +63,7 @@
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Storage, Version=9.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\WindowsAzure.Storage.9.2.0\lib\net45\Microsoft.WindowsAzure.Storage.dll</HintPath>
-    </Reference>
+    </Reference>    
     <Reference Include="Newtonsoft.Json, Version=6.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -88,7 +88,19 @@
     <Compile Include="..\..\..\Common\Commands.Common.Storage\Adapters\WindowsAzure.Storage.6\LazyAzureStorageContext.cs">
       <Link>Common\LazyAzureStorageContext.cs</Link>
     </Compile>
+    <Compile Include="Blob\LockAzureStorageContainerImmutabilityPolicy.cs" />
+    <Compile Include="Blob\RemoveAzureStorageContainerImmutabilityPolicy.cs" />
+    <Compile Include="Blob\GetAzureStorageContainerImmutabilityPolicy.cs" />
+    <Compile Include="Blob\SetAzureStorageContainerImmutabilityPolicy.cs" />
+    <Compile Include="Blob\RemoveAzureStorageContainer.cs" />
+    <Compile Include="Blob\NewAzureStorageContainer.cs" />
+    <Compile Include="Blob\RemoveAzureStorageContainerLegalHold.cs" />
+    <Compile Include="Blob\AddAzureStorageContainerLegalHold.cs" />
+    <Compile Include="Blob\UpdateAzureStorageContainer.cs" />
+    <Compile Include="Blob\GetAzureStorageContainer.cs" />
+    <Compile Include="Blob\StorageBlobBaseCmdlet.cs" />
     <Compile Include="Models\PSNetworkRule.cs" />
+    <Compile Include="Models\PSContainer.cs" />
     <Compile Include="Models\PSStorageAccount.cs" />
     <Compile Include="Models\PSUsage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
