--- a/src/ResourceManager/KeyVault/KeyVaultProvider/Commands.KeyVault.Provider.csproj
+++ b/src/ResourceManager/KeyVault/KeyVaultProvider/Commands.KeyVault.Provider.csproj
@@ -95,14 +95,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Microsoft.Azure.Commands.KeyVault.Provider.dll-Help.xml" />
+    <None Include="Microsoft.Azure.Commands.KeyVault.Provider.dll-Help.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\..\tools\Common.Dependencies.targets" />
   <Target Name="AfterBuild">
-    <ItemGroup>
-      <MarkdownFiles Include="$(ProjectDir)help\*.*" />
-    </ItemGroup>
     <ItemGroup>
       <OutFiles Include="$(OutDir)\**\*.*" />
     </ItemGroup>
