--- a/src/ResourceManager/ApiManagement/Commands.SMAPI.Test/Commands.ApiManagement.ServiceManagement.Test.Netcore.csproj
+++ b/src/ResourceManager/ApiManagement/Commands.SMAPI.Test/Commands.ApiManagement.ServiceManagement.Test.Netcore.csproj
@@ -22,16 +22,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Management.ApiManagement" Version="3.4.0-preview" />
-    <PackageReference Include="Microsoft.Azure.Management.Storage" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Azure.Management.ApiManagement" Version="3.4.0" />
+    <!-- <PackageReference Include="Microsoft.Azure.Management.Storage" Version="3.0.0" />
     <PackageReference Include="Microsoft.WindowsAzure.Management.Compute" Version="12.8.0" />
     <PackageReference Include="Microsoft.WindowsAzure.Management.Storage" Version="5.1.1" />
-    <PackageReference Include="System.Management.Automation" Version="3.0.0.0" />
+    <PackageReference Include="System.Management.Automation" Version="3.0.0.0" /> -->
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Commands.Common.Authentication.Abstractions\Common.Authentication.Abstractions.Netcore.csproj" />
     <ProjectReference Include="..\..\..\Common\Commands.Common\Common.Netcore.csproj" />
+    <ProjectReference Include="..\..\..\Common\Commands.Common.Storage\Common.Storage.Netcore.csproj" />
     <ProjectReference Include="..\..\Common\Commands.ScenarioTests.ResourceManager.Common\Common.ResourceManager.ScenarioTests.Netcore.csproj" />
   </ItemGroup>
 
