--- a/src/ResourceManager/ApiManagement/Commands.SMAPI.Test/packages.config
+++ b/src/ResourceManager/ApiManagement/Commands.SMAPI.Test/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.28.3" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime.Azure.Authentication" version="2.2.9-preview" targetFramework="net45" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure.TestFramework" version="1.5.0-preview" targetFramework="net452" />
   <package id="Microsoft.WindowsAzure.Management" version="4.1.1" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Management.Compute" version="12.8.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Management.Storage" version="5.1.1" targetFramework="net45" />
