--- a/src/ResourceManager/EventGrid/Commands.EventGrid.Test/Commands.EventGrid.Test.csproj
+++ b/src/ResourceManager/EventGrid/Commands.EventGrid.Test/Commands.EventGrid.Test.csproj
@@ -56,9 +56,11 @@
       <HintPath>..\..\..\packages\Microsoft.Azure.Management.Authorization.2.0.0\lib\net40\Microsoft.Azure.Management.Authorization.dll</HintPath>
       <Private>True</Private>
     </Reference>
-	<Reference Include="Microsoft.Azure.Management.EventGrid, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL"> 
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.EventGrid.2.0.0-preview\lib\net452\Microsoft.Azure.Management.EventGrid.dll</HintPath> 
-    </Reference> 
+    <Reference Include="Microsoft.Azure.Management.EventGrid, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL"> 
+      <SpecificVersion>False</SpecificVersion> 
+      <HintPath>..\..\..\packages\Microsoft.Azure.Management.EventGrid.2.0.0-preview\lib\net452\Microsoft.Azure.Management.EventGrid.dll</HintPath>  
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Azure.Management.EventHub">
       <HintPath>..\..\..\packages\Microsoft.Azure.Management.EventHub.2.0.3\lib\net452\Microsoft.Azure.Management.EventHub.dll</HintPath>
     </Reference>
