--- a/src/ResourceManager/PowerBIEmbedded/Commands.PowerBI/Commands.PowerBI.Netcore.csproj
+++ b/src/ResourceManager/PowerBIEmbedded/Commands.PowerBI/Commands.PowerBI.Netcore.csproj
@@ -41,6 +41,7 @@
     <ProjectReference Include="..\..\..\Common\Commands.Common.Authentication.Abstractions\Common.Authentication.Abstractions.Netcore.csproj" />
     <ProjectReference Include="..\..\..\Common\Commands.Common\Common.Netcore.csproj" />
     <ProjectReference Include="..\..\Common\Commands.ResourceManager.Common\Common.ResourceManager.Netcore.csproj" />
+    <ProjectReference Include="..\Commands.Management.PowerBIEmbedded\Commands.Management.PowerBIEmbedded.Netcore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
