--- a/src/ResourceManager/StorageSync/Commands.StorageSync/Config.json
+++ b/src/ResourceManager/StorageSync/Commands.StorageSync/Config.json
@@ -38,16 +38,17 @@
   ],
   "BlacklistOfCodePoints": [
     34,
-    92,
+    42,
     47,
     58,
-    124,
     60,
     62,
-    42,
     63,
+    92,
+    124,
     127,
     129,
+    133,
     141,
     143,
     144,
@@ -60,74 +61,90 @@
     8237,
     8238
   ],
-  "BlacklistOfCodePointRanges": [
+  "WhitelistOfCodePointRanges": [
     {
-      "Start": 0,
-      "End": 31
+      "Start": 32,
+      "End": 55295
     },
     {
-      "Start": 55296,
+      "Start": 63744,
+      "End": 64975
+    },
+    {
+      "Start": 65008,
+      "End": 65519
+    },
+    {
+      "Start": 65536,
+      "End": 131069
+    },
+    {
+      "Start": 131072,
+      "End": 196605
+    },
+    {
+      "Start": 196608,
+      "End": 262141
+    },
+    {
+      "Start": 262144,
+      "End": 327677
+    },
+    {
+      "Start": 327680,
+      "End": 393213
+    },
+    {
+      "Start": 393216,
+      "End": 458749
+    },
+    {
+      "Start": 458752,
+      "End": 524285
+    },
+    {
+      "Start": 524288,
+      "End": 589821
+    },
+    {
+      "Start": 589824,
+      "End": 655357
+    },
+    {
+      "Start": 655360,
+      "End": 720893
+    },
+    {
+      "Start": 720896,
+      "End": 786429
+    },
+    {
+      "Start": 786432,
+      "End": 851965
+    },
+    {
+      "Start": 851968,
+      "End": 917501
+    },
+    {
+      "Start": 921600,
+      "End": 983037
+    },
+    {
+      "Start": 57344,
       "End": 63743
     },
     {
-      "Start": 64976,
-      "End": 65007
+      "Start": 983040,
+      "End": 1048573
     },
     {
-      "Start": 65520,
-      "End": 65535
+      "Start": 1048576,
+      "End": 1114109
     },
     {
-      "Start": 131070,
-      "End": 131071
-    },
-    {
-      "Start": 196606,
-      "End": 196607
-    },
-    {
-      "Start": 262142,
-      "End": 262143
-    },
-    {
-      "Start": 327678,
-      "End": 327679
-    },
-    {
-      "Start": 393214,
-      "End": 393215
-    },
-    {
-      "Start": 458750,
-      "End": 458751
-    },
-    {
-      "Start": 524286,
-      "End": 524287
-    },
-    {
-      "Start": 589822,
-      "End": 589823
-    },
-    {
-      "Start": 655358,
-      "End": 655359
-    },
-    {
-      "Start": 720894,
-      "End": 720895
-    },
-    {
-      "Start": 786430,
-      "End": 786431
-    },
-    {
-      "Start": 851966,
-      "End": 851967
-    },
-    {
-      "Start": 917502,
-      "End": 917503
+      "Start": 917504,
+      "End": 921599
     }
   ]
 }
